# generate-wildcards-vercel-namecheap

./: .env  Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs  token_inject.rs
